--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,9 @@
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th link_to 'Movie Title', title_header
+      %th Movie Title
       %th Rating
-      %th link_to 'Release Date', release_date_header
+      %th Release Date
       %th More Info
   %tbody
     - @movies.each do |movie|
