--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,7 +4,7 @@
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th= link_to 'Movie Title', title_header
+      %th= link_to 'Movie Title', movie_path(movie)
       %th Rating
       %th Release Date
       %th More Info
