--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,9 @@
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th= link_to "Movie Title", movies_path(:action => title)
+      %th= link_to "Movie Title", movies_path
       %th Rating
-      %th= link_to "Release Date", movies_path(:action => release_date)
+      %th= link_to "Release Date", movies_path
       %th More Info
   %tbody
     - @movies.each do |movie|
