--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,9 @@
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th= link_to "Movie Title", movies_path(:sortby => "title"), :id => "title_header", :class => "hilite"
+      %th= link_to "Movie Title", {movies_path(:sortby => "title"), :id => "title_header"}, :class => "hilite"
       %th Rating
-      %th= link_to "Release Date", movies_path(:sortby => "release_date"),  :id => "release_date_header", :class => "hilite"
+      %th= link_to "Release Date", {movies_path(:sortby => "release_date"),  :id => "release_date_header"}, :class => "hilite"
       %th More Info
   %tbody
     - @movies.each do |movie|
