--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,9 @@
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th{params[:sortby] == "title" ? {:class => "hilite"} : {}}= link_to "Movie Title", movies_path(:sortby => "title"), :id => "title_header"
+      %th{params[:sortby] == "title" ? {:class => "hilite p-3 mb-2 bg-warning text-dark"} : {}}= link_to "Movie Title", movies_path(:sortby => "title"), :id => "title_header"
       %th Rating
-      %th{params[:sortby] == "release_date" ? {:class => "hilite"} : {}}= link_to "Release Date", movies_path(:sortby => "release_date"),  :id => "release_date_header"
+      %th{params[:sortby] == "release_date" ? {:class => "hilite p-3 mb-2 bg-warning text-dark"} : {}}= link_to "Release Date", movies_path(:sortby => "release_date"),  :id => "release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
